extra lab03 - adding two questions

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             <p> my name is joudi awameh ,19 years old</p>
         </section>
         <section id="one">
+            <ul>
             <h3>
-                my education history
+                <li>my education history</li>
             </h3>
             <p>
                 i am fresh graduate from high school , now i am going to  study computer science in university 
@@ -29,11 +30,12 @@
         </section>
         <section id="two">
             <h3>
-                my job experience
+                <li> job experience</li>
             </h3>
             <p> 
                 as you know i am fresh graduate from high school so i don't have any job experience but, i tried to teach quran for children
             </p>
+        </ul>
         </section>
         <section  id="three">
             <h3>
@@ -48,6 +50,23 @@
             <button id="hide" onclick="hide()">Test yourself if you know me</button>
             
             
+        </section>
+        <section>
+            <p>
+                I like reading Police novels this is the best books i read it:
+            </p>
+            <ol>
+                <li>Death on the Nile </li>
+                <li> The A.B.C. Murders </li>
+                <li> Endless Night</li>
+                <li> Peril at End House</li>
+                <li> The Secret of Chimneys' Crime</li>
+                <li> The Seven Alarms Mystery</li>
+                <li> Zero hour</li>
+                <li> The grizzly horse</li>
+                <li> The Pale Horse</li>
+                <li>The Murder of Roger Ackroyd</li>
+            </ol>
         </section>
 
     </main>
