--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             
         </section>
         <section>
-            <p>
+            <p class="boklist">
                 I like reading Police novels this is the best books i read it:
             </p>
-            <ol>
+            <ol id = "booklist">
                 <li>Death on the Nile </li>
                 <li> The A.B.C. Murders </li>
                 <li> Endless Night</li>
